Controller and templates for Post

--- a/templates/blog/index.html.twig
+++ b/templates/blog/index.html.twig
@@ -2,6 +2,6 @@
 {% extends 'base.html.twig' %}
 
 
-{% block title %}Blog{% endblock %}
+{% block title %} Blog {% endblock %}
 
-{% block body %}<h1>Page d'accueil</h1>{% endblock %}
+{% block body %}<h1>Welcome on our wonderful blog</h1>{% endblock %}
