--- a/templates/post/index.html.twig
+++ b/templates/post/index.html.twig
@@ -1,20 +1,15 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello PostController!{% endblock %}
+{% block title %}Post list{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
-
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
-
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ '/var/www/html/HMIN302/symfony/blog/src/Controller/PostController.php'|file_link(0) }}">src/Controller/PostController.php</a></code></li>
-        <li>Your template at <code><a href="{{ '/var/www/html/HMIN302/symfony/blog/templates/post/index.html.twig'|file_link(0) }}">templates/post/index.html.twig</a></code></li>
-    </ul>
-</div>
+    {% for post in posts %}
+    [<br>
+        &emsp;<b>{{ post.name }}</b> <br>
+        &emsp;{{ post.slug }} <br>
+        &emsp;{{ post.publicationDate.format('d-m-Y H:i:s') }} <br>
+        &emsp;{{ post.content }} <br>
+    ]<br>
+    <br>
+    {% endfor %}
 {% endblock %}
