--- a/templates/post/show.html.twig
+++ b/templates/post/show.html.twig
@@ -8,6 +8,7 @@
 {% block body %}<h1>Post {{ id }}</h1>
 <ul>
     <li><h3>Name : {{post_name}}</h3></li>
+    <li><h3>Slug : {{post_slug}}</h3></li>
     <li><h3>Publication date : {{post_pub_date}}</h3> </li>
     <li><h3>Content : {{post_content}}</h3></li>
 </ul>
