--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -4,7 +4,8 @@
 <html>
     <head>
         <meta http-equiv="content-type" content="text/html" charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
+        <title>{% block title %} Welcome! {% endblock %}</title>
+        <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
         {% block stylesheets %}{% endblock %}
     </head>
     <body>
