--- a/templates/blog/index.html.twig
+++ b/templates/blog/index.html.twig
@@ -4,4 +4,14 @@
 
 {% block title %} Blog {% endblock %}
 
-{% block body %}<h1>Welcome on our wonderful blog</h1>{% endblock %}
+{% block body %}
+  <section class="section">
+    <div class="container">
+      <h1 class="title">Welcome on our wonderful blog</h1>
+
+      <p class="subtitle">
+        Our blog uses <strong>Bulma</strong>!
+      </p>
+    </div>
+  </section>
+{% endblock %}
