--- a/templates/post/index.html.twig
+++ b/templates/post/index.html.twig
@@ -16,6 +16,14 @@
     <div class="container">
       <h1 class="title">Post list</h1>
 
+      <div class="field is-grouped">
+        <p class="control">
+          <a class="button is-dark" href="{{ path('form_create') }}">
+            Write a post >>
+          </a>
+        </p>
+      </div>
+
       {% for post in posts %}
 
         <article class="message {% if loop.index0 == 0 %} is_lastness {% endif %}">
