--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,7 +14,17 @@
     <body>
         <header>{% block header %}{% endblock %}</header>
         {% block body %}{% endblock %}
-        <footer>{% block footer %}{% endblock %}</footer>
+        <footer>
+        {% block footer %}
+          <div class="content has-text-centered">
+            <p>
+              <strong>Symfony blog</strong> by
+              <a href="https://github.com/cmamon">Christophe QUENETTE</a> and
+              <a href="https://github.com/stremor-03">Sullyvan TREMOR</a>.
+            </p>
+          </div>
+        {% endblock %}
+        </footer>
         {% block javascripts %}{% endblock %}
     </body>
 </html>
