--- a/templates/post/index.html.twig
+++ b/templates/post/index.html.twig
@@ -6,37 +6,29 @@
   <section class="section">
     <div class="container">
       <h1 class="title">Welcome on our wonderful blog</h1>
-
-      <p class="subtitle">
-        Our blog uses <strong>Bulma</strong>!
-      </p>
     </div>
   </section>
   <section class="section">
     <div class="container">
-      <h1 class="title">Post list</h1>
-
       {% for post in posts %}
-
         <article class="message {% if loop.index0 == 0 %} is_lastness {% endif %}">
-
           <div class="message-header {% if loop.index0 == 0 %} is_lastness {% endif %}">
-
-          <p>{{ posts[loop.revindex0].name }}</p>
-        </div>
-        <div class="message-body">
-          <em>{{ posts[loop.revindex0].publicationDate.format('H:i \o\n l jS F Y') }} </em><br>
-          {{ posts[loop.revindex0].content }}
-        <br><br>
-        <div class="field is-grouped">
-          <p class="control">
-            <a class="button is-dark {% if loop.index0 == 0 %} is_lastness {% endif %}" href="{{ path('post_show', {'id': posts[loop.revindex0].id}) }}">
-              View article >>
-            </a>
-          </p>
-        </div>
-        </div>
-      </article>
+            <p>{{ posts[loop.revindex0].name }}</p>
+          </div>
+          <div class="message-body">
+            <em>{{ posts[loop.revindex0].publicationDate.format('H:i \o\n l jS F Y') }} </em><br>
+            {{ posts[loop.revindex0].content }}
+            <br><br>
+            <div class="field is-grouped">
+              <p class="control">
+                <a class="button is-dark {% if loop.index0 == 0 %} is_lastness {% endif %}"
+                   href="{{ path('post_show', {'id': posts[loop.revindex0].id}) }}">
+                  View article >>
+                </a>
+              </p>
+            </div>
+          </div>
+        </article>
       {% endfor %}
     </div>
   </section>
