--- a/public/less/styles.less
+++ b/public/less/styles.less
@@ -57,3 +57,9 @@
   -webkit-animation-delay: 5s;
   -webkit-animation-fill-mode: forwards;
 }
+
+.form{
+  margin: auto;
+  width: 40%;
+  padding: 10px;
+}
