--- a/templates/post/create.html.twig
+++ b/templates/post/create.html.twig
@@ -7,32 +7,8 @@
 
 {% block body %}
 
-<h1> New Post </h1>
+<h1 class="title">New Post</h1>
 
-<section class="section">
-  <div class="container">
-    <div class="columns is-centered">
-      <div class="field">
-        <label class="label">Title</label>
-        <div class="control">
-          <input class="input" type="text" placeholder="Text input">
-        </div>
-      </div>
-
-      <div class="field">
-        <label class="label">Content</label>
-        <div class="control">
-          <textarea class="textarea" placeholder="Textarea"></textarea>
-        </div>
-      </div>
-
-      <div class="field is-grouped">
-        <div class="control">
-          <button class="button is-link">Submit</button>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
+{{ form(form) }}
 
 {% endblock %}
