--- a/templates/post/index.html.twig
+++ b/templates/post/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Post list{% endblock %}
+{% block title %}Blog{% endblock %}
 
 {% block body %}
   <section class="section">
