--- a/templates/header.html.twig
+++ b/templates/header.html.twig
@@ -1,7 +1,7 @@
 {# templates/header.html.twig #}
 <nav class="navbar is-light" role="navigation" aria-label="main navigation">
   <div class="navbar-brand">
-    <a class="navbar-item" href="{{ app.request.baseUrl }}">
+    <a class="navbar-item" href="{{ url('index') }}">
         Blog
     </a>
 
