--- a/templates/post/create.html.twig
+++ b/templates/post/create.html.twig
@@ -37,7 +37,7 @@
       {{ form_row(form.submit, { 'label': 'Submit me', 'attr': {'class': 'button is-link'}}) }}
     </div>
     <div class="control">
-      <a class="button is-link is-light" href="{{ path('post') }}">
+      <a class="button is-link is-light" href="{{ path('index') }}">
         Cancel
       </a>
     </div>
