--- a/templates/post/show.html.twig
+++ b/templates/post/show.html.twig
@@ -30,7 +30,7 @@
             Previous
           </a>
 
-          <a class="button is-dark" href="{{ path('post') }}">
+          <a class="button is-dark" href="{{ path('index') }}">
             Back
           </a>
 
