--- a/templates/post/index.html.twig
+++ b/templates/post/index.html.twig
@@ -13,7 +13,7 @@
 
       <div class="field is-grouped">
         <p class="control">
-          <a class="button is-dark" href="{{ path('form_create') }}">
+          <a class="button is-dark" href="{{ path('post_create') }}">
             Write a post >>
           </a>
         </p>
