--- a/templates/header.html.twig
+++ b/templates/header.html.twig
@@ -16,7 +16,7 @@
     <div class="navbar-end">
       <div class="navbar-item">
         <div class="buttons">
-          <a class="button is-primary">
+          <a class="button is-primary" href="{{ path('register') }}">
             <strong>Sign up</strong>
           </a>
           <a class="button is-light">
