--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -13,6 +13,7 @@
             <link rel="stylesheet" href="{{ asset('css/styles.css') }}">
         {% endblock %}
         <script src="https://cdnjs.cloudflare.com/ajax/libs/less.js/3.0.0/less.min.js" type="text/javascript"></script>
+        <script src="https://kit.fontawesome.com/9a52707ace.js" crossorigin="anonymous"></script>
     </head>
     <body>
         <header>
