--- a/templates/post/index.html.twig
+++ b/templates/post/index.html.twig
@@ -30,7 +30,7 @@
               <a style="padding-right: 15px" href="{{ path('post_delete', {'id': posts[loop.revindex0].id}) }}">
                 <i class="fas fa-thumbtack"></i>
               </a>
-              <a style="padding-right: 15px" href="{{ path('post_delete', {'id': posts[loop.revindex0].id}) }}">
+              <a style="padding-right: 15px" href="{{ path('post_edit', {'id': posts[loop.revindex0].id}) }}">
                 <i class="fas fa-edit"></i>
               </a>
               <a href="{{ path('post_delete', {'id': posts[loop.revindex0].id}) }}" >
