--- a/templates/post/index.html.twig
+++ b/templates/post/index.html.twig
@@ -25,30 +25,30 @@
 
           <div class="message-header {% if loop.index0 == 0 %} is_lastness {% endif %}">
 
-            <p>{{ posts[loop.revindex0].name }}</p>
+            <p>{{ posts[loop.index0].name }}</p>
             <span>
-              <a style="padding-right: 15px" href="{{ path('post_pinned', {'id': posts[loop.revindex0].id}) }}">
+              <a style="padding-right: 15px" href="{{ path('post_pinned', {'id': posts[loop.index0].id}) }}">
                 <i class="fas fa-thumbtack"></i>
               </a>
-              <a style="padding-right: 15px" href="{{ path('post_edit', {'id': posts[loop.revindex0].id}) }}">
+              <a style="padding-right: 15px" href="{{ path('post_edit', {'id': posts[loop.index0].id}) }}">
                 <i class="fas fa-edit"></i>
               </a>
-              <a href="{{ path('post_delete', {'id': posts[loop.revindex0].id}) }}" >
+              <a href="{{ path('post_delete', {'id': posts[loop.index0].id}) }}" >
                 <i class="far fa-times-circle" ></i>
               </a>
             </span>
           </div>
           <div class="message-body">
             <figure class="image" style="margin-left: auto;margin-right: auto;">
-              <img src="{{ asset('files/images/' ~ posts[loop.revindex0].image) }}"><br>
+              <img src="{{ asset('files/images/' ~ posts[loop.index0].image) }}"><br>
             </figure>
-            <em>{{ posts[loop.revindex0].publicationDate.format('H:i \o\n l jS F Y') }} </em><br>
-            {{ posts[loop.revindex0].content }}
+            <em>{{ posts[loop.index0].publicationDate.format('H:i \o\n l jS F Y') }} </em><br>
+            {{ posts[loop.index0].content }}
             <br><br>
             <div class="field is-grouped">
               <p class="control">
                 <a class="button is-dark {% if loop.index0 == 0 %} is_lastness {% endif %}"
-                   href="{{ path('post_show', {'id': posts[loop.revindex0].id}) }}">
+                   href="{{ path('post_show', {'id': posts[loop.index0].id}) }}">
                   View article >>
                 </a>
               </p>
