--- a/templates/post/create.html.twig
+++ b/templates/post/create.html.twig
@@ -12,13 +12,6 @@
 {{ form_start(form)  }}
 <section class="form">
   <div class="field">
-    <label class="label">Username</label>
-    <div class="control">
-      {{ form_widget(form.slug, { 'attr': {'class': 'input'} }) }}
-    </div>
-  </div>
-
-  <div class="field">
     <label class="label">Title</label>
     <div class="control">
         {{ form_widget(form.name, { 'attr': {'class': 'input'} }) }}
@@ -26,7 +19,7 @@
   </div>
 
   <div class="field">
-    <label class="label">Message</label>
+    <label class="label">Content</label>
     <div class="control ">
         {{ form_widget(form.content, { 'attr': {'class': 'textarea'} }) }}
     </div>
@@ -34,7 +27,7 @@
 
   <div class="field is-grouped">
     <div class="control">
-      {{ form_row(form.submit, { 'label': 'Submit me', 'attr': {'class': 'button is-link'}}) }}
+      {{ form_row(form.submit, { 'label': 'Publish', 'attr': {'class': 'button is-link'}}) }}
     </div>
     <div class="control">
       <a class="button is-link is-light" href="{{ path('index') }}">
