--- a/templates/post/index.html.twig
+++ b/templates/post/index.html.twig
@@ -23,15 +23,16 @@
       {% for post in posts %}
         <article
           class="message
-          {% if (post.isPinned() and posts[0].getPublicationDate() > posts[1].getPublicationDate())
+          {% if (loop.length == 1)
+          or (loop.lenght > 1 and post.isPinned() and posts[0].getPublicationDate() > posts[1].getPublicationDate())
           or (( not posts[0].isPinned() ) and loop.index0 == 0)
           or (posts[0].isPinned() and posts[0].getPublicationDate() < posts[1].getPublicationDate() and loop.index0 == 1) %}
           is_lastness
-          {% endif %}
-      ">
+          {% endif %}">
 
           <div class="message-header
-          {% if (post.isPinned() and posts[0].getPublicationDate() > posts[1].getPublicationDate())
+          {% if (loop.length == 1)
+          or (loop.lenght > 1 and post.isPinned() and posts[0].getPublicationDate() > posts[1].getPublicationDate())
           or (( not posts[0].isPinned() ) and loop.index0 == 0)
           or (posts[0].isPinned() and posts[0].getPublicationDate() < posts[1].getPublicationDate() and loop.index0 == 1) %}
           is_lastness
@@ -65,7 +66,8 @@
             <div class="field is-grouped">
               <p class="control">
                 <a class="button is-dark
-                {% if (post.isPinned() and posts[0].getPublicationDate() > posts[1].getPublicationDate())
+                {% if (loop.length == 1)
+                or (loop.lenght > 1 and post.isPinned() and posts[0].getPublicationDate() > posts[1].getPublicationDate())
                 or (( not posts[0].isPinned() ) and loop.index0 == 0)
                 or (posts[0].isPinned() and posts[0].getPublicationDate() < posts[1].getPublicationDate() and loop.index0 == 1) %}
                 is_lastness
