show post slug in url

--- a/templates/post/index.html.twig
+++ b/templates/post/index.html.twig
@@ -69,7 +69,7 @@
                 or (( not posts[0].isPinned() ) and loop.index0 == 0)
                 or (posts[0].isPinned() and posts[0].getPublicationDate() < posts[1].getPublicationDate() and loop.index0 == 1) %}
                 is_lastness
-                {% endif %}" href="{{ path('post_show', {'id': post.id}) }}">
+                {% endif %}" href="{{ path('post_show', {'slug': post.slug}) }}">
                   View article >>
                 </a>
               </p>
