--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -12,8 +12,6 @@
             <link rel="stylesheet/less" type="text/css" href="{{ asset('less/styles.less') }}" />
             <link rel="stylesheet" href="{{ asset('css/styles.css') }}">
         {% endblock %}
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/less.js/3.0.0/less.min.js" type="text/javascript"></script>
-        <script src="https://kit.fontawesome.com/9a52707ace.js" crossorigin="anonymous"></script>
     </head>
     <body>
         <header>
@@ -27,6 +25,9 @@
             {% include 'footer.html.twig' %}
         {% endblock %}
         </footer>
-        {% block javascripts %}{% endblock %}
+        {% block javascripts %}
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/less.js/3.0.0/less.min.js" type="text/javascript"></script>
+            <script src="https://kit.fontawesome.com/9a52707ace.js" crossorigin="anonymous"></script>
+        {% endblock %}
     </body>
 </html>
