--- a/templates/post/create.html.twig
+++ b/templates/post/create.html.twig
@@ -15,6 +15,11 @@
     <label class="label">Title</label>
     <div class="control">
         {{ form_widget(form.name, { 'attr': {'class': 'input'} }) }}
+        {% if error is defined %}
+            <ul>
+                <li>{{ error.message }}</li>
+            </ul>
+        {% endif %}
     </div>
   </div>
 
