--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,3 +1,20 @@
 .subtitle, h1 {
   text-align: center;
 }
+
+html, body {
+  height: 100%;
+}
+
+body {
+  display: flex;
+  flex-direction: column;
+}
+
+.content {
+  flex: 1 0 auto;
+}
+
+footer {
+  flex-shrink: 0;
+}
