--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -20,7 +20,7 @@
         {% endblock %}
         </header>
         {% block body %}{% endblock %}
-        <footer>
+        <footer class="footer">
         {% block footer %}
             {% include 'footer.html.twig' %}
         {% endblock %}
