--- a/templates/post/index.html.twig
+++ b/templates/post/index.html.twig
@@ -20,16 +20,6 @@
             </p>
           </div>
 
-          {% for post in posts %}
-            <article
-              class="message
-              {% if (post.isPinned() and posts[0].getPublicationDate() > posts[1].getPublicationDate())
-              or (( not posts[0].isPinned() ) and loop.index0 == 0)
-              or (posts[0].isPinned() and posts[0].getPublicationDate() < posts[1].getPublicationDate() and loop.index0 == 1) %}
-              is_lastness
-              {% endif %}
-          ">
-
       {% for post in posts %}
         <article
           class="message
@@ -81,7 +71,7 @@
                 or (( not posts[0].isPinned() ) and loop.index0 == 0)
                 or (posts[0].isPinned() and posts[0].getPublicationDate() < posts[1].getPublicationDate() and loop.index0 == 1) %}
                 is_lastness
-                {% endif %}" href="{{ path('post_show', {'id': post.id}) }}">
+                {% endif %}" href="{{ path('post_show', {'slug': post.slug}) }}">
                   View article >>
                 </a>
               </p>
@@ -90,5 +80,6 @@
         </article>
       {% endfor %}
     </div>
+  </div>
   </section>
 {% endblock %}
